change html js and css

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 button {
     width: 150px;
     height: auto;
-    background-color: aquamarine;
+    background-color: rgb(76, 233, 181);
     border-radius: 3px;
     font-size: xx-large;
 }
@@ -15,3 +15,4 @@ button {
 button:hover {
     cursor: pointer;
 }
+
